tests/snapshots/integration_test__union_type.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, Copy, PartialEq, Eq)]
enum Direction {
    Up,
    Down,
    Left,
    Right,
}

impl Direction {
    pub fn as_str(&self) -> &str {
        match self {
            Direction::Up => "up",
            Direction::Down => "down",
            Direction::Left => "left",
            Direction::Right => "right",
        }
    }
}

impl std::fmt::Display for Direction {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", self.as_str())
    }
}

#[derive(Debug, Clone, Copy, PartialEq, Eq)]
#[repr(i64)]
enum StatusCode {
    V200 = 200,
    V404 = 404,
    V500 = 500,
}

impl std::fmt::Display for StatusCode {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{}", *self as i64)
    }
}

#[derive(Debug, Clone, PartialEq)]
enum Value {
    String(String),
    F64(f64),
    Bool(bool),
}

#[derive(Debug, Clone, PartialEq)]
enum StringOrNumber {
    String(String),
    F64(f64),
}

#[derive(Debug, Clone, PartialEq)]
struct Success {
}

#[derive(Debug, Clone, PartialEq)]
struct Failure {
}

#[derive(Debug, Clone, PartialEq)]
struct MyType {
}

#[derive(Debug, Clone, PartialEq)]
struct Response {
}

#[derive(Debug, Clone, PartialEq)]
struct Promise<T> {
    _phantom_t: std::marker::PhantomData<T>,
}

#[derive(Debug, Clone, PartialEq)]
enum TsResult {
    Success(Success),
    Failure(Failure),
}

#[derive(Debug, Clone, PartialEq)]
enum Mixed {
    String(String),
    MyType(MyType),
}

#[derive(Debug, Clone, PartialEq)]
enum AsyncResult {
    Response(Response),
    Promise(Promise<Response>),
}
