tests/snapshots/integration_test__unsupported_syntax_json_report.snap
---
source: tests/integration_test.rs
expression: json
---
[
  {
    "kind": "ExportDefaultExpr",
    "location": "8:1"
  }
]
