tests/snapshots/integration_test__unsupported_syntax_rust_output.snap
---
source: tests/integration_test.rs
expression: output
---
struct User {
    name: String,
    age: f64,
}

fn greet(user: User) -> String {
    format!("Hello, {}", user.name)
}
