tests/snapshots/integration_test__update_expr.snap
---
source: tests/integration_test.rs
expression: output
---
fn incrementCounter(initial: f64) -> f64 {
    let mut count: f64 = initial;
    {
    let _old = count;
    count = count + 1.0;
    _old
};
    count
}

fn decrementCounter(initial: f64) -> f64 {
    let mut count: f64 = initial;
    {
    let _old = count;
    count = count - 1.0;
    _old
};
    count
}

fn consumeWhitespace(s: String, start: f64) -> f64 {
    let mut startIndex: f64 = start;
    while startIndex < s.len() as f64 {
        {
    let _old = startIndex;
    startIndex = startIndex + 1.0;
    _old
};
    }
    startIndex
}

fn preIncrement(initial: f64) -> f64 {
    let mut count: f64 = initial;
    {
    count = count + 1.0;
    count
};
    count
}

fn preDecrement(initial: f64) -> f64 {
    let mut count: f64 = initial;
    {
    count = count - 1.0;
    count
};
    count
}

fn sumRange(n: f64) -> f64 {
    let mut total = 0.0;
    for i in 0..n as i64 {
        let i = i as f64;
        total = total + i;
    }
    total
}

fn readSequence(arr: Vec<f64>, count: f64) -> f64 {
    let mut i = 0.0;
    let mut total = 0.0;
    while i < count {
        total = total + arr.get({
    let _old = i;
    i = i + 1.0;
    _old
} as usize).cloned().unwrap();
    }
    total
}

fn countDown(start: f64) -> f64 {
    let mut count = start;
    while count > 0.0 {
        {
    let _old = count;
    count = count - 1.0;
    _old
};
    }
    count
}
