tests/snapshots/integration_test__var_type_alias_arrow.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
struct ConnInfo {
    remote: RemoteInfo,
}

#[derive(Debug, Clone, PartialEq)]
struct RemoteInfo {
    address: String,
}

type GetConnInfo = Box<dyn Fn(String) -> ConnInfo>;

pub fn getConnInfo(host: String) -> ConnInfo {
    ConnInfo { remote: RemoteInfo { address: host } }
}
