tests/snapshots/integration_test__var_type_arrow.snap
---
source: tests/integration_test.rs
expression: output
---
#[derive(Debug, Clone, PartialEq)]
struct Point {
    x: f64,
    y: f64,
}

fn makePoint(x: f64) -> Point {
    Point { x: x, y: 0.0 }
}

#[derive(Debug, Clone, PartialEq)]
struct ConnInfo {
    remote: RemoteInfo,
}

#[derive(Debug, Clone, PartialEq)]
struct RemoteInfo {
    address: String,
}

fn getConnInfo(host: String) -> ConnInfo {
    ConnInfo { remote: RemoteInfo { address: host } }
}
