tests/snapshots/integration_test__void_type.snap
---
source: tests/integration_test.rs
expression: output
---
fn doSomething() {
    let mut x: f64 = 1.0;
}

fn runCallback(cb: Box<dyn Fn(f64)>) {
    cb(42.0);
}
